<resources>
    <string name="app_name">CLU</string>
    <string name="edit_message">Enter a message</string>
    <string name="btn_text">Send</string>
    <string name="title_activity_signup">SignupActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="enter_username">ENTER USERNAME</string>
    <string name="button">SIGNUP</string>
    <string name="enter_username1">Enter Username</string>
    <string name="signup">Signup</string>
    <string name="back_to_login">Back To Login</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="logout">LOGOUT</string>
    <string name="banner">Banner</string>
    <string name="talk_with_clu">Talk with CLU</string>
    <string name="password_manager">Password manager</string>
    <string name="almanac">Almanac</string>
    <string name="music_player">Music Player</string>
    <string name="device_info">Device Info</string>
    <string name="settings">SETTINGS</string>
    <string name="back">BACK</string>
    <string name="os_version">OS Version</string>
    <string name="device">Device</string>
    <string name="os_api_level">OS API LEVEL</string>
    <string name="textview">TextView</string>
    <string name="release">Release</string>
    <string name="brand">Brand</string>
    <string name="display">Display</string>
    <string name="cpu_abi">CPU ABI</string>
    <string name="cpu_abi_2">CPU_ABI_2</string>
    <string name="unknown">UNKNOWN</string>
    <string name="hardware">Hardware</string>
    <string name="build_id">Build ID</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="serial">Serial</string>
    <string name="host">HOST</string>
    <string name="user">User</string>
    <string name="model_and_product">Model and Product    </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">LOGIN</string>
</resources>